@@ -2,7 +2,6 @@ Planned features:
 
 * store *.sav files in the images folder or a new folder like 'states' rather than in the {app} folder
 * use the contrast field of skin
-+ select target folder for screenshots
 * i18n (internationalization support)
 * sound emulation
 
@@ -10,9 +9,7 @@ bug #1529250: oh, and a little *Wish List:
 1. Taking animated screenshots using TiEmu (integrated)
 2. Allowing the user to change the folder after you use
 F10 to transfer file from the pc to the emulator
-3. Allow Drag and Drop, like VTI
 
-bug #1471709  	  crash on old .sav load
 bug #1529247  	  Link problem sending file from tiEmu to PC
 
 req #1532860		Video ScreenCapture	
