@@ -15,9 +15,10 @@ gchar *s = N_("PNG");
 gchar *s = N_("ICO");
 gchar *s = N_("EPS");
 gchar *s = N_("PDF");
+gchar *s = N_("BMP");
 gchar *s = N_("Image format:");
 gchar *s = N_("screenshot");
 gchar *s = N_("Pattern:");
+gchar *s = N_("Select folder");
 gchar *s = N_("screenshot000.jpg");
 gchar *s = N_("Filename:");
-gchar *s = N_("Select folder");
