@@ -28,14 +28,14 @@
 
 #include <gdk-pixbuf/gdk-pixbuf.h>
 
-#define IMG_XPM 1 // unsupported
+#define IMG_XPM 1 // unsupported by PixBuf
 #define IMG_PCX 2 // unsupported
 #define IMG_JPG 3 // supported by PixBuf
-#define IMG_PNG 4 // supported by PixBuf
-#define IMG_BMP 5 // unsupported
-#define IMG_ICO 6 // supported by PixBuf
-#define IMG_EPS 7 // unsupported by PixBuf, custom code
-#define IMG_PDF 8 // unsupported by PixBuf, custom code
+#define IMG_PNG 4 // supported
+#define IMG_BMP 5 // supported
+#define IMG_ICO 6 // supported
+#define IMG_EPS 7 // unsupported, custom code
+#define IMG_PDF 8 // unsupported, custom code
 
 #define IMG_TYPE 64
 #define IMG_COL  (IMG_TYPE+1)
